<resources>
    <string name="app_name">Glaze Log</string>
    <string name="glaze_finish_label">Finish</string>
    <string name="glaze_opacity_label">Opacity</string>
    <string name="glaze_atmos_label">Atmosphere</string>
    <string name="glaze_body_label">Clay Body</string>
    <string name="glaze_application_label">Application</string>
    <string name="glaze_workswith_label">Works Well With</string>
    <string name="glaze_body_hint">Description of Clay Body</string>
    <string name="glaze_applicaiton_hint">Method of Application</string>
    <string name="recipe_label">Recipe</string>
    <string name="recipe_spgr_label" translatable="false">"(sp gr: "</string>
    <string name="recipe_additions_label">Additions</string>
    <string name="glaze_firingcycle_label">Firing Cycle:</string>
    <string name="glaze_notes_label">Other Notes</string>
    <string name="glaze_version_primarynotes_hint" translatable="false">Desc. of version</string>
    <string name="glaze_version_secondarynotes_hint">Other notes…</string>
    <string name="glaze_version_number_label" translatable="false">Ver.</string>
    <string name="recipe_spgr_label2" translatable="false">)</string>
    <string name="recipe_hint">Enter Ingredient…</string>
    <string name="recipe_unit_label">g</string>
    <string name="firingcycle_temp_label">Temp</string>
    <string name="firingcycle_rate_label">Deg/Hr</string>
    <string name="firingcycle_hold_label">Hold for</string>
    <string name="recipe_materials_label">Materials</string>
    <string name="recipe_add">+ Line</string>
    <string name="hint_empty">N/A</string>
    <string name="firingcycle_bisque_label">Bisqued To</string>
    <string name="firingcycle_add">+ Ramp/Hold</string>
    <string name="title_activity_glaze_list">GlazeList</string>
    <string name="dialog_newglaze_type_label">Create </string>
    <string name="dialog_newglaze_type_single_label">Single Glaze</string>
    <string name="dialog_newglaze_type_combo_label">Combination of Glazes</string>
    <string name="dialog_newitem_title">Create New </string>
    <string name="list_date_edited">Last Edited</string>
    <string name="appbar_glazename_hint">Glaze Name Here…</string>
    <string name="dialog_addnewversion_text">Would you like to add a new version?</string>
    <string name="appbar_actionbutton_delete">Delete</string>
    <string name="__imagespath">/Android/data/nh.glazelog/files/Pictures</string>
    <string name="appbar_actionbutton_rename_label">Rename</string>
    <string name="dialog_rename_title">Rename glazeName</string>
    <string name="dialog_rename_hint">New Name...</string>
    <string name="dialog_newname_label">New Name:</string>
    <string name="appbar_actionbutton_copy_title">Create Copy of This Version</string>
    <string name="dialog_nocamera_message">Your system does not have a camera, and therefore does not support taking pictures</string>
    <string name="list_title_single">Glazes</string>
    <string name="list_title_combo">Glaze Combinations</string>
    <string name="list_title_firingcycle">Firing Cycles</string>
    <string name="list_title_ingredient">Ingredients</string>
    <string name="appbar_actionbutton_settings_title">Settings</string>
    <string name="navdrawer_open">Open navigation drawer</string>
    <string name="navdrawer_close">Close navigation drawer</string>
    <string name="navdrawer_header">Databases</string>
    <string name="comboglaze_notes_hint">Notes About Application...</string>
    <string name="dialog_delete_text">Are you sure you want to delete this item?</string>
    <string name="dialog_delete_warning">WARNING: This can not be undone.</string>
    <string name="dialog_name_label">Name:</string>
    <string name="glaze_button_label_edit">Edit</string>
    <string name="glaze_firingcycle_makenew">Create New Firing Cycle</string>
    <string name="glaze_firingcycle_spinner_hint">Select Firing Cycle</string>
    <string name="glaze_button_label_norecipe">Enter Recipe</string>
    <string name="list_dialog_title_single">Create New Glaze</string>
    <string name="list_dialog_title_combo">Create New Glaze Combination</string>
    <string name="list_dialog_title_firingcycle">Create New Firing Cycle</string>
    <string name="list_dialog_title_ingredient">Create New Ingredient</string>
    <string name="list_dialog_failed">An item with this name already exists! Please choose another name.</string>
    <string name="glaze_fcdialog_failed">A firing cycle with this name already exists! Please choose another name.</string>
    <string name="list_dialog_button_positive">Create</string>
    <string name="list_dialog_button_negative">Cancel</string>
</resources>
