<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/text_cone"
        android:title="Cone N/A"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/action_rename"
        android:title="@string/appbar_actionbutton_rename_label"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_copy"
        android:title="@string/appbar_actionbutton_copy_title"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_create_template"
        android:icon="@drawable/ic_rounded_corner_black_24dp"
        android:title="@string/appbar_actionbutton_newtemplate_title"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_glaze"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:title="@string/appbar_actionbutton_delete"
        app:showAsAction="never"/>

</menu>