<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nh.glazelog.activity.EditFiringCycle">

    <include layout="@layout/actionbar_default"/>

    <TextView
        android:id="@+id/spgrLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/action_bar_plus_primary_inset"
        android:layout_marginLeft="@dimen/layout_primary_inset"
        android:text="@string/recipe_spgr_label"
        android:textAppearance="@style/SubtitleText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/spgrField"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_textview_to_textfield_separator"
        android:layout_marginStart="@dimen/layout_textview_to_textfield_separator"
        android:ems="10"
        android:hint="@string/hint_empty"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/spgrLabel"
        app:layout_constraintLeft_toRightOf="@+id/spgrLabel" />

    <TextView
        android:id="@+id/spgrLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_textview_to_textfield_separator"
        android:layout_marginStart="@dimen/layout_textview_to_textfield_separator"
        android:text="@string/recipe_spgr_label2"
        android:textAppearance="@style/SubtitleText"
        app:layout_constraintBaseline_toBaselineOf="@+id/spgrLabel"
        app:layout_constraintLeft_toRightOf="@+id/spgrField" />

    <TextView
        android:id="@+id/materialsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_secondary_inset"
        android:layout_marginTop="@dimen/layout_inter_section_separator"
        android:text="@string/recipe_materials_label"
        android:textAppearance="@style/StandardText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spgrLabel"
        />

    <Button
        android:id="@+id/materialAddLineButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/layout_label_to_field_separator"
        android:layout_marginStart="@dimen/layout_label_to_field_separator"
        android:text="@string/recipe_add"
        app:layout_constraintBaseline_toBaselineOf="@+id/materialsLabel"
        app:layout_constraintLeft_toRightOf="@+id/materialsLabel" />

    <TableLayout
        android:id="@+id/recipeMaterialsTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_secondary_inset"
        android:layout_marginRight="@dimen/layout_secondary_inset"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/layout_header_to_field_separator"
        app:layout_constraintTop_toBottomOf="@+id/materialsLabel">


    </TableLayout>

    <TextView
        android:id="@+id/additionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_secondary_inset"
        android:layout_marginTop="@dimen/layout_intra_section_separator"
        android:text="@string/recipe_additions_label"
        android:textAppearance="@style/StandardText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeMaterialsTable"
        android:layout_marginStart="@dimen/layout_secondary_inset" />

    <Button
        android:id="@+id/additionsAddLineButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/layout_label_to_field_separator"
        android:layout_marginStart="@dimen/layout_label_to_field_separator"
        android:text="@string/recipe_add"
        app:layout_constraintBaseline_toBaselineOf="@+id/additionsLabel"
        app:layout_constraintLeft_toRightOf="@+id/additionsLabel" />

    <TableLayout
        android:id="@+id/recipeAdditionsTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_secondary_inset"
        android:layout_marginRight="@dimen/layout_secondary_inset"
        android:layout_marginTop="@dimen/layout_header_to_field_separator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionsLabel">


    </TableLayout>

</android.support.constraint.ConstraintLayout>
