<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/versionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_primary_inset"
        android:layout_marginTop="16dp"
        android:text="@string/glaze_version_number_label"
        android:textAppearance="@style/HeaderText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/layout_primary_inset" />

    <TextView
        android:id="@+id/versionField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_textview_to_textfield_separator"
        android:text="1"
        android:textAppearance="@style/HeaderText"
        app:layout_constraintBaseline_toBaselineOf="@+id/versionLabel"
        app:layout_constraintLeft_toRightOf="@+id/versionLabel"
        android:layout_marginStart="@dimen/layout_textview_to_textfield_separator" />

    <Space
        android:id="@+id/space2"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/space3"
        app:layout_constraintLeft_toRightOf="@+id/versionField"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/primaryNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_primary_inset"
        android:layout_marginLeft="@dimen/layout_primary_inset"
        android:layout_marginRight="@dimen/layout_primary_inset"
        android:layout_marginStart="@dimen/layout_primary_inset"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/glaze_version_primarynotes_hint"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/space2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/deleteVersionImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_clear_black_24dp"
        android:layout_marginLeft="@dimen/layout_primary_inset"
        android:layout_marginRight="@dimen/layout_primary_inset"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/primaryNotes"
        app:layout_constraintBaseline_toBaselineOf="@+id/primaryNotes"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/versionLabel"
        android:id="@+id/space3"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <ImageView
        android:id="@+id/testTileImageView"
        android:layout_width="@dimen/image_testtile_width"
        android:layout_height="@dimen/image_testtile_height"
        android:background="@drawable/noimg"
        android:scaleType="fitCenter"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/space3"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/recipeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_primary_inset"
        android:layout_marginTop="@dimen/layout_inter_section_separator"
        android:text="@string/recipe_label"
        android:textAppearance="@style/HeaderText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testTileImageView"
        android:layout_marginStart="@dimen/layout_primary_inset" />

    <TextView
        android:id="@+id/spgrLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_primary_inset"
        android:text="@string/recipe_spgr_label"
        android:textAppearance="@style/SubtitleText"
        app:layout_constraintLeft_toRightOf="@+id/recipeLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/recipeLabel"
        android:layout_marginStart="@dimen/layout_primary_inset" />

    <EditText
        android:id="@+id/spgrField"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_textview_to_textfield_separator"
        android:layout_marginStart="@dimen/layout_textview_to_textfield_separator"
        android:ems="10"
        android:hint="@string/hint_empty"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/spgrLabel1"
        app:layout_constraintLeft_toRightOf="@+id/spgrLabel1" />

    <TextView
        android:id="@+id/spgrLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_textview_to_textfield_separator"
        android:layout_marginStart="@dimen/layout_textview_to_textfield_separator"
        android:text="@string/recipe_spgr_label2"
        android:textAppearance="@style/SubtitleText"
        app:layout_constraintBaseline_toBaselineOf="@+id/spgrLabel1"
        app:layout_constraintLeft_toRightOf="@+id/spgrField" />

    <TextView
        android:id="@+id/materialsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_secondary_inset"
        android:layout_marginTop="@dimen/layout_header_to_field_separator"
        android:text="@string/recipe_materials_label"
        android:textAppearance="@style/StandardText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeLabel"
        android:layout_marginStart="@dimen/layout_secondary_inset" />

    <Button
        android:id="@+id/materialAddLineButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/layout_label_to_field_separator"
        android:layout_marginStart="@dimen/layout_label_to_field_separator"
        android:text="@string/recipe_add"
        app:layout_constraintBaseline_toBaselineOf="@+id/materialsLabel"
        app:layout_constraintLeft_toRightOf="@+id/materialsLabel" />

    <TableLayout
        android:id="@+id/recipeMaterialsTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_secondary_inset"
        android:layout_marginRight="@dimen/layout_secondary_inset"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/layout_header_to_field_separator"
        app:layout_constraintTop_toBottomOf="@+id/materialsLabel"
        android:layout_marginStart="@dimen/layout_secondary_inset"
        android:layout_marginEnd="@dimen/layout_secondary_inset">

    </TableLayout>

    <TextView
        android:id="@+id/additionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_secondary_inset"
        android:layout_marginTop="@dimen/layout_intra_section_separator"
        android:text="@string/recipe_additions_label"
        android:textAppearance="@style/StandardText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeMaterialsTable"
        android:layout_marginStart="@dimen/layout_secondary_inset" />

    <Button
        android:id="@+id/additionsAddLineButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/layout_label_to_field_separator"
        android:layout_marginStart="@dimen/layout_label_to_field_separator"
        android:text="@string/recipe_add"
        app:layout_constraintBaseline_toBaselineOf="@+id/additionsLabel"
        app:layout_constraintLeft_toRightOf="@+id/additionsLabel" />

    <TableLayout
        android:id="@+id/recipeAdditionsTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_secondary_inset"
        android:layout_marginRight="@dimen/layout_secondary_inset"
        android:layout_marginTop="@dimen/layout_header_to_field_separator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionsLabel"
        android:layout_marginStart="@dimen/layout_secondary_inset"
        android:layout_marginEnd="@dimen/layout_secondary_inset">
    </TableLayout>

    <TextView
        android:id="@+id/firingcycleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_primary_inset"
        android:layout_marginTop="@dimen/layout_inter_section_separator"
        android:text="@string/firingcycle_label"
        android:textAppearance="@style/HeaderText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeAdditionsTable"
        android:layout_marginStart="@dimen/layout_primary_inset" />

    <TextView
        android:id="@+id/bisqueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_primary_inset"
        android:layout_marginStart="@dimen/layout_primary_inset"
        android:text="@string/firingcycle_bisque_label"
        android:textAppearance="@style/SubtitleText"
        app:layout_constraintBaseline_toBaselineOf="@+id/firingcycleLabel"
        app:layout_constraintLeft_toRightOf="@id/firingcycleLabel" />

    <Spinner
        android:id="@+id/bisqueSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_header_to_field_separator"
        app:layout_constraintBaseline_toBaselineOf="@+id/bisqueLabel"
        app:layout_constraintLeft_toRightOf="@+id/bisqueLabel"
        android:layout_marginStart="@dimen/layout_header_to_field_separator"
        app:layout_constraintRight_toRightOf="parent"/>

    <TableLayout
        android:id="@+id/firingcycleTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_primary_inset"
        android:layout_marginRight="@dimen/layout_primary_inset"
        android:layout_marginTop="@dimen/layout_header_to_field_separator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firingcycleLabel"
        android:layout_marginStart="@dimen/layout_secondary_inset"
        android:layout_marginEnd="@dimen/layout_secondary_inset">

        <include layout="@layout/tablerow_firingcycle_title"></include>

    </TableLayout>

    <Button
        android:id="@+id/firingCycleAddLineButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/layout_secondary_inset"
        android:layout_marginTop="@dimen/layout_header_to_field_separator"
        android:text="@string/firingcycle_add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firingcycleTable"
        android:layout_marginStart="@dimen/layout_secondary_inset" />

    <TextView
        android:id="@+id/secondaryNotesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_primary_inset"
        android:layout_marginTop="@dimen/layout_intra_section_separator"
        android:text="@string/glaze_notes_label"
        android:textAppearance="@style/HeaderText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firingCycleAddLineButton"
        android:layout_marginStart="@dimen/layout_primary_inset" />

    <EditText
        android:id="@+id/secondaryNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_secondary_inset"
        android:layout_marginLeft="@dimen/layout_secondary_inset"
        android:layout_marginRight="@dimen/layout_secondary_inset"
        android:layout_marginStart="@dimen/layout_secondary_inset"
        android:layout_marginTop="@dimen/layout_header_to_field_separator"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/glaze_version_secondarynotes_hint"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:textAlignment="viewStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondaryNotesLabel" />
    <!-- android:scrollHorizontally="false" is not needed, but I included it anyway because fuck it -->

</android.support.constraint.ConstraintLayout>