<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newGlazeTemplate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/newGlazeTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_newglaze_type_label"
        android:textAppearance="@style/StandardText"
        android:layout_marginLeft="@dimen/layout_primary_inset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/layout_primary_inset"
        android:layout_marginStart="@dimen/layout_primary_inset" />


    <RadioButton
        android:id="@+id/singleGlazeRadioButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_newglaze_type_single_label"
        android:layout_marginTop="@dimen/layout_header_to_field_separator"
        app:layout_constraintTop_toBottomOf="@+id/newGlazeTypeLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/comboGlazeRadioButton"
        android:layout_marginLeft="@dimen/layout_secondary_inset" />

    <RadioButton
        android:id="@+id/comboGlazeRadioButton"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_newglaze_type_combo_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/singleGlazeRadioButton"
        app:layout_constraintLeft_toRightOf="@+id/singleGlazeRadioButton"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/layout_intra_section_separator"
        android:layout_marginRight="@dimen/layout_secondary_inset"/>

    <TextView
        android:id="@+id/newGlazeTemplateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_newglaze_template_label"
        android:textAppearance="@style/StandardText"
        android:layout_marginLeft="@dimen/layout_primary_inset"
        android:layout_marginStart="@dimen/layout_primary_inset"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/layout_inter_section_separator"
        app:layout_constraintTop_toBottomOf="@+id/singleGlazeRadioButton" />

    <Spinner
        android:id="@+id/chooseTemplateSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/layout_secondary_inset"
        android:layout_marginRight="@dimen/layout_secondary_inset"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="@dimen/layout_secondary_inset"
        android:layout_marginEnd="@dimen/layout_secondary_inset"
        android:layout_marginTop="@dimen/layout_header_to_field_separator"
        app:layout_constraintTop_toBottomOf="@+id/newGlazeTemplateLabel" />

</android.support.constraint.ConstraintLayout>